==> Apollo-kernel/mechatronics/oled/l475_clion_cubeide/Core/oledlib/oled_driver.c <==
#include "oled_driver.h"

	void I2C_Configuration(void)
	{
//		I2C_InitTypeDef  I2C_InitStructure;
//		GPIO_InitTypeDef  GPIO_InitStructure;

//		RCC_APB1PeriphClockCmd(IIC_RCC_APB1Periph_I2CX, ENABLE);
//		RCC_APB2PeriphClockCmd(IIC_RCC_APB2Periph_GPIOX, ENABLE);

//		GPIO_InitStructure.GPIO_Pin =  IIC_SCL_Pin_X | IIC_SDA_Pin_X;
//		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
//		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_OD;//I2C必须开漏输出
//		GPIO_Init(IIC_GPIOX, &GPIO_InitStructure);

//		I2C_DeInit(I2CX);
//		I2C_InitStructure.I2C_Mode = I2C_Mode_I2C;
//		I2C_InitStructure.I2C_DutyCycle = I2C_DutyCycle_2;
//		I2C_InitStructure.I2C_OwnAddress1 = 0x30;//主机的I2C地址,随便写
//		I2C_InitStructure.I2C_Ack = I2C_Ack_Enable;
//		I2C_InitStructure.I2C_AcknowledgedAddress = I2C_AcknowledgedAddress_7bit;
//		I2C_InitStructure.I2C_ClockSpeed = 400000;

//		I2C_Cmd(I2CX, ENABLE);
//		I2C_Init(I2CX, &I2C_InitStructure);
//		delay_ms(200);
	}

	void I2C_Configuration(void)
	{
		GPIO_InitTypeDef  GPIO_InitStructure;

		RCC_APB2PeriphClockCmd(OLED_RCC_I2C_PORT, ENABLE);	/* 打开GPIO时钟 */

		GPIO_InitStructure.GPIO_Pin = OLED_I2C_SCL_PIN | OLED_I2C_SDA_PIN;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_OD;  	/* 开漏输出 */
		GPIO_Init(OLED_GPIO_PORT_I2C, &GPIO_InitStructure);
	
		IIC_SDA = 1;
		IIC_SCL = 1;
	}

	void IIC_Start(void)
	{
		IIC_SCL = 1;
		IIC_SDA = 1;
		//delay_us(1);
		IIC_SDA = 0;
		//delay_us(1);
		IIC_SCL = 0;
	}

	void IIC_Send_Byte(uint8_t IIC_Byte)
	{
		unsigned char i;
		for (i = 0; i < 8; i++)
		{
			if (IIC_Byte & 0x80)
				IIC_SDA = 1;
			else 
				IIC_SDA = 0;
			//delay_us(1);
			IIC_SCL = 1;
			delay_us(1);  //必须有保持SCL脉冲的延时
			IIC_SCL = 0;
			IIC_Byte <<= 1;
		}
		//原程序这里有一个拉高SDA，根据OLED的要求，此句必须去掉。
		IIC_SCL = 1;
		delay_us(1);
		IIC_SCL = 0;
	}

	void IIC_Stop(void)
	{
		IIC_SDA = 0;
		//delay_us(1);
		IIC_SCL = 1;
		//delay_us(1);
		IIC_SDA = 1;
	}

	void SPI_Configuration(void)
	{
		SPI_InitTypeDef  SPI_InitStructure;
		GPIO_InitTypeDef GPIO_InitStructure;
	#if   (USE_HW_SPI==SPI_2)
		RCC_APB1PeriphClockCmd(SPI_RCC_APB1Periph_SPIX, ENABLE);
	#elif (USE_HW_SPI==SPI_1)
		RCC_APB2PeriphClockCmd(SPI_RCC_APB2Periph_SPIX, ENABLE);
	#endif
		RCC_APB2PeriphClockCmd(SPI_RCC_APB2Periph_GPIOX | RCC_APB2Periph_AFIO, ENABLE);

		GPIO_InitStructure.GPIO_Pin = SPI_CS_Pin_X;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
		GPIO_Init(SPI_CS_GPIOX, &GPIO_InitStructure);
		OLED_CS_HIGH();

		GPIO_InitStructure.GPIO_Pin = SPI_HW_ALL_PINS;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
		GPIO_Init(SPI_HW_ALL_GPIOX, &GPIO_InitStructure);


		SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;//SPI_Direction_1Line_Tx;
		SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
		SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
		SPI_InitStructure.SPI_CPOL = SPI_CPOL_Low;
		SPI_InitStructure.SPI_CPHA = SPI_CPHA_1Edge;
		SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;
		SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_2;
		SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
		SPI_InitStructure.SPI_CRCPolynomial = 7;

		SPI_Init(SPIX, &SPI_InitStructure);
		SPI_Cmd(SPIX, ENABLE);

		GPIO_InitStructure.GPIO_Pin = SPI_RES_PIN;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
		GPIO_Init(SPI_RES_GPIOX, &GPIO_InitStructure);
		GPIO_InitStructure.GPIO_Pin = SPI_DC_PIN;
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
		GPIO_Init(SPI_DC_GPIOX, &GPIO_InitStructure);
		OLED_DATA_MODE();

		OLED_RESET_HIGH();
		WaitTimeMs(100);
		OLED_RESET_LOW();
		WaitTimeMs(100);
		OLED_RESET_HIGH();
	}

	void SPI_WriterByte(unsigned char dat)
	{

		while (SPI_I2S_GetFlagStatus(SPIX, SPI_I2S_FLAG_TXE) == RESET ) {}; //检查指定的SPI标志位设置与否:发送缓存空标志位
		SPI_I2S_SendData(SPIX, dat); //通过外设SPIx发送一个数据
		while (SPI_I2S_GetFlagStatus(SPIX, SPI_I2S_FLAG_RXNE) == RESET) {}; //检查指定的SPI标志位设置与否:接受缓存非空标志位
		SPI_I2S_ReceiveData(SPIX); //返回通过SPIx最近接收的数据

	}

	void SPI_Configuration(void)
	{
		GPIO_InitTypeDef  GPIO_InitStructure;

		RCC_APB2PeriphClockCmd(RCC_APB2Periph_GPIOA, ENABLE);     	//使能A端口时钟
		GPIO_InitStructure.GPIO_Pin = GPIO_Pin_4 | GPIO_Pin_5 | GPIO_Pin_6 | GPIO_Pin_7 | GPIO_Pin_8;
		GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;        	//推挽输出
		GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;       	//速度50MHz
		GPIO_Init(GPIOA, &GPIO_InitStructure);
		GPIO_SetBits(GPIOA, GPIO_Pin_5 | GPIO_Pin_7 | GPIO_Pin_4);

		OLED_RST_Set();
		delay_ms(100);
		OLED_RST_Clr();
		delay_ms(200);
		OLED_RST_Set();
	}

	void OLED_WR_Byte(uint8_t dat, uint8_t cmd)
	{
		uint8_t i;
		if (cmd)
		OLED_DC_Set();
		else
		OLED_DC_Clr();
		OLED_CS_Clr();
		for (i = 0; i < 8; i++)
		{
		OLED_SCLK_Clr();
		if (dat & 0x80)
		OLED_SDIN_Set();
		else
		OLED_SDIN_Clr();
		OLED_SCLK_Set();
		dat <<= 1;
		}
		OLED_CS_Set();
		OLED_DC_Set();
	}

void OLED_Init(void)
{
	HAL_Delay(800);
	WriteCmd(0xAE); //display off

	WriteCmd(0x20); //Set Memory Addressing Mode
//	WriteCmd(0x10); //00,Horizontal Addressing Mode;01,Vertical Addressing Mode;10,Page Addressing Mode (RESET);11,Invalid
	WriteCmd(0x00); //00,Horizontal Addressing Mode;01,Vertical Addressing Mode;10,Page Addressing Mode (RESET);11,Invalid
	
//The setting of the start and end addresses of SSD1306 (SSD1306 and SSD1315 are compatible)
	WriteCmd(0xb0); //Set Page Start Address for Page Addressing Mode,0-7
	WriteCmd(0xc8); //Set COM Output Scan Direction
	WriteCmd(0x00); //---set low column address
	WriteCmd(0x10); //---set high column address
	WriteCmd(0x40); //--set start line address


//The setting of the start and end addresses of SSD1315	(SSD1306 and SSD1315 are compatible)
	WriteCmd(0X21);	//---set column start and end address
  WriteCmd(0X00);	//---set start column address 0
  WriteCmd(0X7F);	//---set end column address 127
  WriteCmd(0X22);	//--set page start and end address
  WriteCmd(0X00);	//--set start address 0
  WriteCmd(0X07);	//--set end address 7

	WriteCmd(0x81); //--set contrast control register
	WriteCmd(0xff); //亮度调节 0x00~0xff
	WriteCmd(0xa1); //--set segment re-map 0 to 127
	WriteCmd(0xa6); //--set normal display
	WriteCmd(0xa8); //--set multiplex ratio(1 to 64)
	WriteCmd(0x3F); //
	WriteCmd(0xa4); //0xa4,Output follows RAM content;0xa5,Output ignores RAM content
	WriteCmd(0xd3); //-set display offset
	WriteCmd(0x00); //-not offset
	WriteCmd(0xd5); //--set display clock divide ratio/oscillator frequency
	WriteCmd(0xf0); //--set divide ratio
	WriteCmd(0xd9); //--set pre-charge period
	WriteCmd(0x22); //
	WriteCmd(0xda); //--set com pins hardware configuration
	WriteCmd(0x12);
	WriteCmd(0xdb); //--set vcomh
	WriteCmd(0x20); //0x20,0.77xVcc
	WriteCmd(0x8d); //--set DC-DC enable
	WriteCmd(0x14); //
	WriteCmd(0xaf); //--turn on oled panel
	OLED_CLS();
}

void OLED_ON(void)
{
	WriteCmd(0X8D);  //设置电荷泵
	WriteCmd(0X14);  //开启电荷泵
	WriteCmd(0XAF);  //OLED唤醒
}

void OLED_OFF(void)
{
	WriteCmd(0X8D);  //设置电荷泵
	WriteCmd(0X10);  //关闭电荷泵
	WriteCmd(0XAE);  //OLED休眠
}
