==> to-ywz/OLED_Device/oledlib/oled_driver.c <==
#include "oled_driver.h"
#include "Delay.h"
#include "main.h"
#include "stm32f4xx_hal_def.h"

void I2C_Configuration(void)
{
	GPIO_InitTypeDef gpio_init = {0};

	/**
	 * PB6	--> I2C1_SCL
	 * PB7  --> I2C1_SDA
	 * */
	IIC_GPIO_ENABLE();
	__HAL_RCC_I2C1_CLK_ENABLE();

	// GPIO 模式配置
	gpio_init.Pin = IIC_SCL_PIN_X | IIC_SDA_PIN_X;
	gpio_init.Speed = GPIO_SPEED_FREQ_HIGH;
	gpio_init.Mode = GPIO_MODE_AF_OD;
	gpio_init.Pull = GPIO_PULLUP;
	gpio_init.Alternate = GPIO_AF4_I2C1;
	HAL_GPIO_Init(IIC_GPIOX, &gpio_init);

	// * I2C 模式配置
	hi2c1.Instance = I2C1;
	hi2c1.Init.ClockSpeed = 400000;
	hi2c1.Init.DutyCycle = I2C_DUTYCYCLE_2;
	hi2c1.Init.OwnAddress1 = 0;
	hi2c1.Init.AddressingMode = I2C_ADDRESSINGMODE_7BIT;
	hi2c1.Init.DualAddressMode = I2C_DUALADDRESS_DISABLE;
	hi2c1.Init.OwnAddress2 = 0;
	hi2c1.Init.GeneralCallMode = I2C_GENERALCALL_DISABLE;
	hi2c1.Init.NoStretchMode = I2C_NOSTRETCH_DISABLE;
	if (HAL_I2C_Init(&hi2c1) != HAL_OK)
	{
		Error_Handler();
	}
#if (USING_DMA)
	// DMA TX 初始化
	hdma_i2c1_tx.Instance = DMA1_Stream6;
	hdma_i2c1_tx.Init.Channel = DMA_CHANNEL_1;
	hdma_i2c1_tx.Init.Direction = DMA_MEMORY_TO_PERIPH;
	hdma_i2c1_tx.Init.PeriphInc = DMA_PINC_DISABLE;
	hdma_i2c1_tx.Init.MemInc = DMA_MINC_ENABLE;
	hdma_i2c1_tx.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
	hdma_i2c1_tx.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
	hdma_i2c1_tx.Init.Mode = DMA_NORMAL;
	hdma_i2c1_tx.Init.Priority = DMA_PRIORITY_LOW;
	hdma_i2c1_tx.Init.FIFOMode = DMA_FIFOMODE_DISABLE;
	if (HAL_DMA_Init(&hdma_i2c1_tx) != HAL_OK)
	{
		Error_Handler();
	}

	__HAL_LINKDMA(&hi2c1, hdmatx, hdma_i2c1_tx);
#endif
	/* I2C1 interrupt Init */
	HAL_NVIC_SetPriority(I2C1_EV_IRQn, 0, 0);
	HAL_NVIC_EnableIRQ(I2C1_EV_IRQn);
}

void I2C_Configuration(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;

	OLED_GPIO_RCC_ENABLE();

	GPIO_InitStructure.Pin = OLED_I2C_SCL_PIN | OLED_I2C_SDA_PIN;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH;
	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP; /* 开漏输出 */
	HAL_GPIO_Init(OLED_GPIO_PORT_I2C, &GPIO_InitStructure);

	IIC_SDA_SET;
	IIC_SCL_SET;
}

void IIC_Start(void)
{
	IIC_SDA_SET;
	IIC_SCL_SET;
	delay_us(4);
	IIC_SDA_CLS;
	delay_us(4);
	IIC_SCL_CLS;
}

void IIC_Send_Byte(uint8_t IIC_Byte)
{
	unsigned char i;

	IIC_SCL_CLS;

	for (i = 0; i < 8; i++)
	{
		if (IIC_Byte & 0x80)
			IIC_SDA_SET;
		else
			IIC_SDA_CLS;
		IIC_Byte <<= 1;

		delay_us(2);
		IIC_SCL_SET;
		delay_us(2); //必须有保持SCL脉冲的延时
		IIC_SCL_CLS;
		delay_us(2);
	}
	//原程序这里有一个拉高SDA，根据OLED的要求，此句必须去掉。
	// IIC_SDA_SET;
	// IIC_SCL_SET;
	// delay_us(1);
	// IIC_SCL_CLS;
}

void IIC_Stop(void)
{
	IIC_SCL_CLS;
	IIC_SDA_CLS;
	delay_us(4);
	IIC_SCL_SET;
	delay_us(4);
	IIC_SDA_SET;
	delay_us(4);
}

void SPI_Configuration(void)
{
	SPI_InitTypeDef SPI_InitStructure;
	GPIO_InitTypeDef GPIO_InitStructure;

	SPI_RCC_SPIx_EN();
	SPI_RCC_GPIOx_EN();

	//* 软件 片选引脚
	GPIO_InitStructure.Pin = SPI_CS_Pin_x;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	HAL_GPIO_Init(SPI_CS_GPIOx, &GPIO_InitStructure);
	OLED_CS_HIGH();

	// * SPI 引脚
	GPIO_InitStructure.Pin = SPI_HW_ALL_PINS;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	GPIO_InitStructure.Mode = GPIO_MODE_AF_PP;
	HAL_GPIO_Init(SPI_HW_ALL_GPIOx, &GPIO_InitStructure);

	hspi1.Instance = SPI1;
	hspi1.Init.Mode = SPI_MODE_MASTER;
	hspi1.Init.Direction = SPI_DIRECTION_2LINES;
	hspi1.Init.DataSize = SPI_DATASIZE_8BIT;
	hspi1.Init.CLKPolarity = SPI_POLARITY_LOW;
	hspi1.Init.CLKPhase = SPI_PHASE_1EDGE;
	hspi1.Init.NSS = SPI_NSS_SOFT;
	hspi1.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_2;
	hspi1.Init.FirstBit = SPI_FIRSTBIT_MSB;
	hspi1.Init.TIMode = SPI_TIMODE_DISABLE;
	hspi1.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;
	hspi1.Init.CRCPolynomial = 10;
	if (HAL_SPI_Init(&hspi1) != HAL_OK)
	{
		Error_Handler();
	}

#if USING_DMA
	hdma_spi1_tx.Instance = DMA2_Stream3;
	hdma_spi1_tx.Init.Channel = DMA_CHANNEL_3;
	hdma_spi1_tx.Init.Direction = DMA_MEMORY_TO_PERIPH;
	hdma_spi1_tx.Init.PeriphInc = DMA_PINC_DISABLE;
	hdma_spi1_tx.Init.MemInc = DMA_MINC_ENABLE;
	hdma_spi1_tx.Init.PeriphDataAlignment = DMA_PDATAALIGN_BYTE;
	hdma_spi1_tx.Init.MemDataAlignment = DMA_MDATAALIGN_BYTE;
	hdma_spi1_tx.Init.Mode = DMA_NORMAL;
	hdma_spi1_tx.Init.Priority = DMA_PRIORITY_LOW;
	hdma_spi1_tx.Init.FIFOMode = DMA_FIFOMODE_DISABLE;
	if (HAL_DMA_Init(&hdma_spi1_tx) != HAL_OK)
	{
		Error_Handler();
	}

	__HAL_LINKDMA(spiHandle, hdmatx, hdma_spi1_tx);

	/* SPI1 interrupt Init */
	HAL_NVIC_SetPriority(SPI1_IRQn, 0, 0);
	HAL_NVIC_EnableIRQ(SPI1_IRQn);
#endif

	// * 复位引脚
	GPIO_InitStructure.Pin = SPI_RES_PIN;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	HAL_GPIO_Init(SPI_RES_GPIOx, &GPIO_InitStructure);

	// * DC 引脚
	GPIO_InitStructure.Pin = SPI_DC_PIN;
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_HIGH;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;
	HAL_GPIO_Init(SPI_DC_GPIOx, &GPIO_InitStructure);
	OLED_DATA_MODE();

	OLED_RESET_HIGH();
	delay_ms(100);
	OLED_RESET_LOW();
	delay_ms(100);
	OLED_RESET_HIGH();
}

void SPI_WriterByte(unsigned char *dat, int len)
{
	HAL_SPI_Transmit(&hspi1, dat, len, 1000);
}

void SPI_Configuration(void)
{
	GPIO_InitTypeDef GPIO_InitStructure;

	OLED_GPIO_RCC_ENABLE(); //使能B端口时钟
	GPIO_InitStructure.Pin = OLED_SPI_CLK_PIN | OLED_SPI_DIN_PIN | OLED_SPI_RES_PIN | OLED_SPI_DC_PIN | OLED_SPI_CS_PIN;
	GPIO_InitStructure.Mode = GPIO_MODE_OUTPUT_PP;		  //推挽输出
	GPIO_InitStructure.Speed = GPIO_SPEED_FREQ_VERY_HIGH; //速度50MHz
	HAL_GPIO_Init(OLED_GPIO_PORT_SPI, &GPIO_InitStructure);
	HAL_GPIO_WritePin(OLED_GPIO_PORT_SPI, OLED_SPI_CLK_PIN | OLED_SPI_DIN_PIN | OLED_SPI_DC_PIN, GPIO_PIN_SET);

	OLED_RST_SET;
	delay_ms(100);
	OLED_RST_CLS;
	delay_ms(200);
	OLED_RST_SET;
}

void OLED_WR_Byte(uint8_t dat, uint8_t cmd)
{
	uint8_t i;
	if (cmd)
		OLED_DC_SET;
	else
		OLED_DC_CLS;
	OLED_CS_CLS;
	for (i = 0; i < 8; i++)
	{
		OLED_SCLK_CLS;
		if (dat & 0x80)
			OLED_SDIN_SET;
		else
			OLED_SDIN_CLS;
		OLED_SCLK_SET;
		dat <<= 1;
	}
	OLED_CS_SET;
	OLED_DC_SET;
}

void OLED_Init(void)
{
	int length = sizeof(OLED_Init_CMD) / sizeof(OLED_Init_CMD[0]);
#if USING_DMA
	DMA_WriteCmd(OLED_Init_CMD, length);
#else
	WriteCmd(OLED_Init_CMD, length);

	// WriteCmd(0xAE); //display off
	// WriteCmd(0x20); //Set Memory Addressing Mode
	// WriteCmd(0x10); //00,Horizontal Addressing Mode;01,Vertical Addressing Mode;10,Page Addressing Mode (RESET);11,Invalid
	// WriteCmd(0xb0); //Set Page Start Address for Page Addressing Mode,0-7
	// WriteCmd(0xc8); //Set COM Output Scan Direction
	// WriteCmd(0x00); //---set low column address
	// WriteCmd(0x10); //---set high column address
	// WriteCmd(0x40); //--set start line address
	// WriteCmd(0x81); //--set contrast control register
	// WriteCmd(0xff); //亮度调节 0x00~0xff
	// WriteCmd(0xa1); //--set segment re-map 0 to 127
	// WriteCmd(0xa6); //--set normal display
	// WriteCmd(0xa8); //--set multiplex ratio(1 to 64)
	// WriteCmd(0x3F); //
	// WriteCmd(0xa4); //0xa4,Output follows RAM content;0xa5,Output ignores RAM content
	// WriteCmd(0xd3); //-set display offset
	// WriteCmd(0x00); //-not offset
	// WriteCmd(0xd5); //--set display clock divide ratio/oscillator frequency
	// WriteCmd(0xf0); //--set divide ratio
	// WriteCmd(0xd9); //--set pre-charge period
	// WriteCmd(0x22); //
	// WriteCmd(0xda); //--set com pins hardware configuration
	// WriteCmd(0x12);
	// WriteCmd(0xdb); //--set vcomh
	// WriteCmd(0x20); //0x20,0.77xVcc
	// WriteCmd(0x8d); //--set DC-DC enable
	// WriteCmd(0x14); //
	// WriteCmd(0xaf); //--turn on oled panel
#endif
	OLED_CLS();
}

void OLED_ON(void)
{
	uint8_t buf[] = {0x8d, 0x14, 0xaf};
#if USING_DMA
	DMA_WriteCmd(buf, sizeof(buf));
#else
	WriteCmd(buf, sizeof(buf));
#endif
}

void OLED_OFF(void)
{
	uint8_t buf[] = {0x8d, 0x10, 0xae};
#if USING_DMA
	DMA_WriteCmd(buf, sizeof(buf));
#else
	WriteCmd(buf, sizeof(buf));
#endif
}
